commented debug